Docker and LICENSE info

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,6 +4,10 @@ on:
   pull-request:
     paths-ignore:
       - 'README.rst'
+      - '.gitignore'
+      - '.dockerignore'
+      - 'Dockerfile'
+      - 'LICENSE'
     branches:
       - "main"
 
