--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,13 @@
 name: Lint
 
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - 'README.rst'
+      - '.gitignore'
+      - '.dockerignore'
+      - 'Dockerfile'
+
 
 jobs:
   lint:
