--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,6 @@ name: Release
 on:
   push:
     tags: v[0-9]+.[0-9]+.[0-9]+
-    branches: main
 
 jobs:
   release:
@@ -30,6 +29,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: 
+          tags: |
             ghcr.io/${{ env.REPOSITORY_LOWERCASE }}:latest
             ghcr.io/${{ env.REPOSITORY_LOWERCASE }}:${{ env.RELEASE_VERSION }}
